--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		]
 	},
 	"dependencies": {
+		"@google-cloud/translate": "^3.0.1",
 		"bootstrap": "^4.3.1",
 		"events": "^1.1.1",
 		"jquery": "^3.3.1",
