--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"gh-pages": "^1.2.0",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
-		"node-sass": "^4.5.3",
+		"node-sass": "^4.12.0",
 		"parse-github-url": "^1.0.2",
 		"prettier": "^1.14.3",
 		"prettier-webpack-plugin": "^1.1.0",
@@ -54,8 +54,9 @@
 	},
 	"dependencies": {
 		"bootstrap": "^4.3.1",
+		"bootstrap-progress-bar": "^1.1.3",
 		"events": "^1.1.1",
-		"jquery": "^3.3.1",
+		"jquery": "^3.4.0",
 		"popper.js": "^1.12.9",
 		"prop-types": "^15.6.1",
 		"query-string": "^5.1.1",
