--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 	"dependencies": {
 		"bootstrap": "^4.3.1",
 		"events": "^1.1.1",
+		"google-map-react": "^1.1.4",
 		"jquery": "^3.3.1",
 		"popper.js": "^1.12.9",
 		"prop-types": "^15.6.1",
